# ium26

./: .gitignore  02_dane_results.ipynb  Dockerfile  Jenkinsfile  Jenkinsfile.compute_stats  README.md  artifacts.dvc  compute_stats.py  ferrero_rocher_sales_dataset.csv  predict_nn.py  predict_torch_model.py  preprocess_data.py  process_data.sh  pyproject.toml  train_nn.py  train_torch_model.py
.github/workflows/: ml_training.yml
artifacts/: data_clean.csv  dev_data.csv  dev_data_norm.csv  revenue_mlp_model.joblib  test_data.csv  test_data_norm.csv  test_predictions.csv  train_data.csv  train_data_norm.csv
