[project]
name = "inzynieria-uczenia-maszynowego"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mlflow>=2.18.0",
    "numpy>=2.4.3",
    "pandas>=2.2,<3",
    "scikit-learn>=1.8.0",
    "torch>=2.2.0",
]
